refactor color variables

--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -61,7 +61,7 @@
     <header
       class="flex flex-col sm:flex-row items-center justify-center sm:justify-between flex-wrap gap-8 px-2 py-8 sm:p-8 max-w-7xl mx-auto title-display text-2xl w-full"
     >
-      <a href="/" class="text-primary-on-dark font-extrabold">Karly Nelson</a>
+      <a href="/" class="text-primary font-extrabold">Karly Nelson</a>
       <nav class="flex items-center justify-center flex-wrap gap-1">
         <a href="/" {% if page.url == '/' %} aria-current="page" {% endif %}>About Me</a>
         <a href="/posts" {% if '/posts' in page.url %} aria-current="page" {% endif %}>Articles</a>
