--- a/_includes/svgs/bottom-curve.njk
+++ b/_includes/svgs/bottom-curve.njk
@@ -1,6 +1,6 @@
 {#
 <svg
-  class="block fill-article-bg w-full"
+  class="block fill-bg-is-light w-full"
   viewBox="0 0 1067 192"
   xmlns="http://www.w3.org/2000/svg"
 >
@@ -11,7 +11,7 @@
 #}
 
 <svg
-  class="block fill-article-bg w-full"
+  class="block fill-bg-is-light w-full"
   viewBox="0 0 540 40"
   xmlns="http://www.w3.org/2000/svg"
 >
