--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -10,7 +10,7 @@ layout: layouts/default.njk
 
     <h1 class="mb-8">{{title}}</h1>
 
-    <p class="text-secondary-on-dark text-sm">
+    <p class="text-secondary text-sm">
       Published: {{page.date | postDate}}{% if lastUpdated%} • Updated:
       {{lastUpdated | postDate}}{% endif %}
     </p>
@@ -29,7 +29,7 @@ layout: layouts/default.njk
     <details class="mt-8" open>
       <summary class="mb-4">Table of Contents</summary>
       <aside
-        class="border border-solid border-secondary-on-light px-4 py-6 rounded bg-black bg-opacity-25"
+        class="border border-solid border-slate-600 px-4 py-6 rounded bg-black bg-opacity-25"
       >
         {{ content | toc | safe }}
       </aside>
@@ -37,7 +37,7 @@ layout: layouts/default.njk
   </div>
 
   <div class="mt-24 relative -bottom-1">{% include "svgs/top-curve.njk" %}</div>
-  <div class="article-content pt-1 pb-8">
+  <div class="article-content bg-is-light is-on-light text-primary pt-1 pb-8">
     <div class="container relative -top-11">{{ content | safe }}</div>
   </div>
   <div class="relative -top-1 z-0">{% include "svgs/bottom-curve.njk" %}</div>
