add page layout; update resume styles

--- a/404.njk
+++ b/404.njk
@@ -3,7 +3,7 @@ permalink: 404.html
 layout: layouts/default.njk
 ---
 
-<div class="max-w-3xl mx-auto text-center">
+<div class="container text-center">
   <a class="mt-4" href="/">Karly Nelson</a>
   <h1 class="text-6xl font-bold mt-40">
     Oops! <span role="image" aria-label="Sad emoji.">😓</span>
