--- a/404.njk
+++ b/404.njk
@@ -3,13 +3,11 @@ permalink: 404.html
 layout: layouts/default.njk
 ---
 
-<div class="container text-center">
-  <a class="mt-4" href="/">Karly Nelson</a>
-  <h1 class="text-6xl font-bold mt-40">
+<div class="container text-center sm:pt-16">
+  <h1 class="text-4xl sm:text-6xl font-bold">
     Oops! <span role="image" aria-label="Sad emoji.">😓</span>
   </h1>
   <p class="text-2xl mt-8">
     The page you were looking for either doesn't exist or was deleted.
   </p>
-  <a class="mt-6" href="/">Go to home page</a>
 </div>
