update github link

--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -79,7 +79,7 @@
         </p>
         <div class="flex items-center gap-4">
         <a
-          href="https://github.com/karlynelson"
+          href="https://github.com/karlyanelson"
           class="text-center md:text-right img-link"
         >
           <img src="/images/github-mark-white.svg" />
