--- a/index.njk
+++ b/index.njk
@@ -1,17 +1,16 @@
 ---
 layout: layouts/default.njk
 title: About Me
-description: Hi! I'm Karly. I'm a Senior Software Engineer and UX Designer at Ledger Works in St. Louis. I design and build web apps, mobile apps, and some pretty sweet charcuterie boards.
+description: Hi! I'm Karly. I'm a Senior Software Engineer and UX Designer at a small startup called Ledger Works. I design and build web apps, mobile apps, and some pretty sweet charcuterie boards.
 ---
 
 <div class="about-me container pb-64">
   <h1>Hi! I'm Karly</h1>
   <p class="text-2xl mt-8">
-    I'm a Senior Software Engineer and UX Designer at
+    I'm a Senior Software Engineer and UX Designer at a small startup called 
     <a target="_blank" rel="noopener noreferrer" href="https://lworks.io/"
       >Ledger Works</a
-    >
-    in St. Louis. I design and build web apps, mobile apps, and some pretty
+    >. I design and build web apps, mobile apps, and some pretty
     sweet charcuterie boards.
   </p>
   <p class="mt-6 text-xl">
