--- a/index.njk
+++ b/index.njk
@@ -1,13 +1,13 @@
 ---
 layout: layouts/default.njk
 title: About Me
-description: Hi! I'm Karly. I'm a Senior Software Engineer and UX Designer at a small startup called Ledger Works. I design and build web apps, mobile apps, and some pretty sweet charcuterie boards.
+description: Hi! I'm Karly. I'm a Senior Software Engineer and UX Designer at Ledger Works. I design and build web apps, mobile apps, and some pretty sweet charcuterie boards.
 ---
 
 <div class="about-me container pb-64">
   <h1>Hi! I'm Karly</h1>
   <p class="text-2xl mt-8">
-    I'm a Senior Software Engineer and UX Designer at a small startup called 
+    I'm a Senior Software Engineer and UX Designer at 
     <a target="_blank" rel="noopener noreferrer" href="https://lworks.io/"
       >Ledger Works</a
     >. I design and build web apps, mobile apps, and some pretty
