--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -37,6 +37,9 @@
       rel="stylesheet"
     />
 
+ <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Tiny5&display=swap" rel="stylesheet">
+
+
     {# Search - Pagefind JS #}
     <script src="/pagefind/pagefind-ui.js"></script>
 
@@ -63,10 +66,19 @@
     >
       <a href="/" class="text-primary font-extrabold">Karly Nelson</a>
       <nav class="flex items-center justify-center flex-wrap gap-1">
-        <a href="/" {% if page.url == '/' %} aria-current="page" {% endif %}><span class="nav-emoji">🧀</span> About Me</a>
-        <a href="/posts" {% if '/posts' in page.url %} aria-current="page" {% endif %}><span class="nav-emoji">✏️</span>Articles</a>
+        <a href="/" {% if page.url == '/' %} aria-current="page" {% endif %}>
+            {# <span class="nav-icon">
+              {% include "svgs/pizza-line.svg" %}
+              {% include "svgs/pizza-color.svg" %}
+            </span>  #}
+            <span>About Me</span> </a>
+        <a href="/posts" {% if '/posts' in page.url %} aria-current="page" {% endif %}>
+        {# <span class="nav-emoji">✏️</span> #}
+        Articles</a>
         {# <a href="/resume"{% if '/resume' in page.url %} aria-current="page" {% endif %}>Resume</a> #}
-        <a href="/search"{% if '/search' in page.url %} aria-current="page" {% endif %}><span class="nav-emoji">🔍</span>Search</a>
+        <a href="/search"{% if '/search' in page.url %} aria-current="page" {% endif %}>
+        {# <span class="nav-emoji">🔍</span> #}
+        Search</a>
       </nav>
     </header>
     <main class="mt-10 sm:mt-24 pb-6">
