--- a/_includes/under-construction.njk
+++ b/_includes/under-construction.njk
@@ -1,5 +1,1 @@
-<span
-  class="bg-orange-700 text-white font-bold px-2 py-1 rounded-full inline-block mb-2"
->
-  🚧 Under Construction
-</span>
+<span class="chip-under-construction"> 🚧 Under Construction </span>
