--- a/posts/index.njk
+++ b/posts/index.njk
@@ -2,6 +2,7 @@
 layout: layouts/page.njk
 title: Articles
 description: How-to articles on various specific problems I've solved.
+canonical: https://karlynelson.com/posts
 eleventyImport:
   collections: ["post"]
 ---
