--- a/search.njk
+++ b/search.njk
@@ -2,6 +2,7 @@
 layout: layouts/default.njk
 title: Search
 description: Search my site
+canonical: https://karlynelson.com/search
 ---
 
 <div class="search-page container pb-16">
