--- a/index.njk
+++ b/index.njk
@@ -2,16 +2,17 @@
 layout: layouts/default.njk
 title: About Me
 description: Hi! I'm Karly. I'm a Senior Software Engineer and UX Designer at Ledger Works. I design and build web apps, mobile apps, and some pretty sweet charcuterie boards.
+canonical: https://karlynelson.com
 ---
 
 <div class="about-me container pb-64">
   <h1>Hi! I'm Karly</h1>
   <p class="text-2xl mt-8">
-    I'm a Senior Software Engineer and UX Designer at 
+    I'm a Senior Software Engineer and UX Designer at
     <a target="_blank" rel="noopener noreferrer" href="https://lworks.io/"
       >Ledger Works</a
-    >. I design and build web apps, mobile apps, and some pretty
-    sweet charcuterie boards.
+    >. I design and build web apps, mobile apps, and some pretty sweet
+    charcuterie boards.
   </p>
   <p class="mt-6 text-xl">
     Find me on
