--- a/index.njk
+++ b/index.njk
@@ -9,8 +9,8 @@ canonical: https://karlynelson.com
   <h1>Hi! I'm Karly</h1>
   <p class="text-2xl mt-8">
     I'm a Senior Software Engineer and UX Designer at
-    <a target="_blank" rel="noopener noreferrer" href="https://lworks.io/"
-      >Ledger Works</a
+    <a target="_blank" rel="noopener noreferrer" href="https://kusari.dev/"
+      >Kusari</a
     >. I design and build web apps, mobile apps, and some pretty sweet
     charcuterie boards.
   </p>
